# seven-ai

./: .gitignore  AGENTS.md  AUDIT_LOG.md  CHANGELOG.md  CONTRIBUTING.md  ENHANCEMENT-INTEGRATION.txt  HANDOFF.md  HANDOFF_PROMPT.md  LICENSE  README.md  ROADMAP.md  SETUP.md  SEVEN_AUDIT_v3.2.15.md  SEVEN_AUDIT_v3.2.17.md  SEVEN_AUDIT_v3.2.18.md  SEVEN_AUDIT_v3.2.19.md  SEVEN_AUDIT_v3.2.19_FINAL.md  SEVEN_REAL.md  __init__.py  _analyze_convos.py  _analyze_db.py  _analyze_session.py  build_package.ps1  config.py  create_distribution.bat  create_distribution_v2.ps1  create_package.bat  create_package_v2.ps1  create_seven_shortcut.ps1  create_shortcut.py  discover_cameras.py  find_cameras.py  fix_config.py  gen_neat_config.py  install.bat  install.sh  install_autostart.ps1  launch_seven.py  main.py  main_with_gui.py  (+23 more)
core/: agent_delegation.py  autonomous_handlers.py  autonomous_life.py  background_tasks.py  bot_core.py  bot_initializers.py  context_cascade.py  context_manager.py  conversation_analyzer.py  debug_mode.py  diary_manager.py  dream_system.py  embodied_experience.py  emotion_detector.py  emotion_detector_dummy.py  emotional_complexity.py  emotional_continuity.py  emotions.py  enhanced_bot.py  enhancement_commands.py  enhancements.py  ethical_reasoning.py  homeostasis_system.py  identity_commands.py  identity_manager.py  interrupt_handler.py  intrinsic_motivation.py  knowledge_graph.py  llm_logger.py  llm_provider.py  message_drafter.py  metacognition.py  multimodal_emotion.py  note_commands.py  notes_manager.py  os_awareness.py  persistent_emotions.py  personality.py  personality_quirks.py  phase5_integration.py  (+24 more)
data/: learned_preferences.json
docs/: ACTION_ITEMS.md  ALIVE.md  ALL_ENHANCEMENTS_COMPLETE.md  API.md  AUDIT_LOG.md  AUTONOMOUS_IMPLEMENTATION_PLAN.md  AUTONOMY.md  BACKUP_AND_RECOVERY.md  BUG-FIXES.md  CI.md  CODING_AGENTS.md  COMPLETE-HANDOFF.md  COMPLETE-UPDATE-SUMMARY.md  COMPLETE_SUMMARY_v2.0_FINAL.md  COMPLETION_LEDGER.md  COMPREHENSIVE_CODE_REVIEW_2026.md  CONTINUE.md  CRITICAL_BUGS_FOUND.md  DEPENDENCIES_AND_LICENSES.md  DEPENDENCY_PROVENANCE.csv  DEVELOPMENT_AND_RELEASE_PROCESS.md  DISTRIBUTION_CHECKLIST.md  DISTRIBUTION_FINAL_REPORT.md  DISTRIBUTION_GUIDE.md  DISTRIBUTION_PACKAGE_COMPLETE.md  DISTRIBUTION_v1.1.0_COMPLETE.md  DOCUMENT_READING.md  EXTENSIONS.md  FILE_INVENTORY.csv  FINAL-COMPLETE.md  FINAL_CODE_REVIEW.md  FINAL_RELEASE_CHECKLIST.md  GITHUB_READER.md  GUI-UPGRADE.md  HONEST_BUG_REPORT.md  HONEST_STATUS_REPORT.md  ICON_INSTRUCTIONS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PROGRESS.md  INSTALLATION.md  (+66 more)
evolution/: __init__.py  neat_evolver.py
extensions/: __init__.py  action_item_digest.py  auto_backup.py  code_snippet_manager.py  daily_digest.py  example_extension.py  greeting_manager.py  habit_tracker.py  learning_journal.py  mood_tracker.py  motivation_engine.py  news_digest.py  pomodoro_timer.py  smart_reminders.py  system_health.py  uptime_monitor.py  weather_reporter.py
gui/: GUI_ERROR_FIX_APPLIED.md  __init__.py  bot_gui.py  phase5_gui.py  phase5_gui_error_fix.py  phase5_gui_fix.py  web_ui.py
identity/: HEARTBEAT.md  IDENTITY.md  SILENT_REPLIES.md  SOUL.md  SOUL_AUTONOMOUS.md  TOOLS.md
integrations/: api_explorer.py  clipboard_assistant.py  code_executor.py  command_processor.py  database_manager.py  document_reader.py  file_manager.py  irc_client.py  music_player.py  ollama.py  ollama_manager.py  opencode.py  pdf_generator.py  robotics.py  screen_control.py  self_scripting.py  ssh_manager.py  streaming_ollama.py  text_summarizer.py  timer_system.py  translation.py  web_scraper.py  web_search.py  whatsapp_client.py
learning/: __init__.py  lora_trainer.py
scripts/: generate_dependency_provenance.py  generate_file_inventory.py  generate_legacy_symbol_inventory.py  setup_voice_preview.py  smoke_companion.py  verify_install_lifecycle.py  verify_repository_contract.py  verify_truth.py  verify_wheel.py
(+263 files in other folders)
