[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seven-ai"
version = "4.0.5"
description = "Seven Real — local autonomous AI agent (Ollama-first, L4 tools)"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    {name = "Jan"},
]
keywords = ["ai", "agent", "ollama", "voice-assistant", "local", "tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "pyautogui>=0.9.54",
    "Pillow>=10.0.0",
    "pyperclip>=1.8.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
voice = [
    "edge-tts>=6.1.0",
    "pygame>=2.5.0",
    "pyttsx3>=2.90",
    "SpeechRecognition>=3.10.0",
    "openai-whisper>=20231117",
    "pyaudio>=0.2.13",
]
tray = [
    "pystray>=0.19.0",
]
robotics = [
    "pyserial>=3.5",
]
dev = [
    "pytest>=8.0.0",
]
all = [
    "seven-ai[voice,tray,robotics,dev]",
]

[project.urls]
Repository = "https://github.com/LoSkroefie/seven-ai"
Documentation = "https://github.com/LoSkroefie/seven-ai/blob/main/SEVEN_REAL.md"

[project.scripts]
seven = "seven.__main__:main"

[tool.setuptools.packages.find]
include = ["seven*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-q --tb=short"
